# Cockatrice

./: .gitignore  CMakeLists.txt  CMakePresets.json  docker-compose.yml
.cursor/rules/: Agent-summary-MTG-rules-compliance.mdc  Onboard-agents-to-this-Cockatrice-fork-MTGO-style-rules-engine-tricerules-sidecar-relay.mdc  Use-ruled-prompt-module-in-tab-game-right-panel.mdc  Windows-MSVC-full-build-after-changes.mdc  tricerules-engine-change-safety.mdc
.github/workflows/: tricerules.yml
cockatrice/: CMakeLists.txt
cockatrice/src/game/: game_event_handler.cpp  game_event_handler.h  game_state.cpp  game_state.h  phases_toolbar.cpp  phases_toolbar.h  z_value_layer_manager.h  z_values.h
cockatrice/src/game/board/: abstract_card_item.cpp  (+3 more)
oracle/: CMakeLists.txt
scripts/: launch-local-servatrice.ps1  launch-test-clients.ps1  launch-tricerules-server.ps1
servatrice/: CMakeLists.txt
tests/: CMakeLists.txt  ruled_utils_test.cpp
tests/movecard_tests/: CMakeLists.txt
tests/ruled_batch_tests/: CMakeLists.txt  ruled_batch_test.cpp  server_test_helpers.h
tricerules/: Cargo.toml  README.md
tricerules/tricerules-cards/: Cargo.toml
tricerules/tricerules-cards/data/: balduvian_barbarians.ron  coral_merfolk.ron  counterspell.ron  divination.ron  forest.ron  giant_growth.ron  go_for_the_throat.ron  grizzly_bears.ron  island.ron  lightning_bolt.ron  mountain.ron  plains.ron  savannah_lions.ron  swamp.ron  walking_corpse.ron
tricerules/tricerules-cards/src/: card_def.rs  lib.rs  primitives.rs  registry.rs
tricerules/tricerules-core/: Cargo.toml
tricerules/tricerules-core/src/: engine.rs  lib.rs  state.rs
tricerules/tricerules-core/tests/: scenario.rs  smoke.rs
tricerules/tricerules-proto/: Cargo.toml  build.rs
tricerules/tricerules-proto/src/: lib.rs
tricerules/tricerules-server/: Cargo.toml
tricerules/tricerules-server/src/: main.rs
(+48 files in other folders)
