[workspace]
resolver = "2"
members = [
    "tricerules-proto",
    "tricerules-core",
    "tricerules-cards",
    "tricerules-server",
]

[workspace.package]
edition = "2021"
license = "GPL-2.0-only"
rust-version = "1.74"

[workspace.dependencies]
prost = "0.13"
prost-types = "0.13"
bytes = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "signal"] }
proptest = "1"
