[package]
name = "tricerules-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "tricerules-server"
path = "src/main.rs"

[dependencies]
tricerules-proto = { path = "../tricerules-proto" }
tricerules-core = { path = "../tricerules-core" }
prost.workspace = true
bytes.workspace = true
tokio.workspace = true
